--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0"
   },
-  "devDependencies": {
-    "gh-pages": "^2.0.0",
-    "prettier": "^1.14.3"
-  },
+  "devDependencies": {},
   "keywords": [
     "gatsby",
     "react",
