--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
   "name": "testing-a-new-features",
   "description": "My personal presentation project",
-  "version": "1.3.3",
+  "version": "2.0.1",
   "author": "Oleg Sherbakov <oleg.sherbakov.85@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.6",
-    "gatsby": "^2.15.1",
-    "gatsby-link": "^2.0.1",
-    "gatsby-plugin-manifest": "^2.0.2",
-    "gatsby-plugin-offline": "^2.0.5",
-    "gatsby-plugin-react-helmet": "^3.0.0",
-    "gh-pages": "^2.1.1",
+    "gatsby": "^2.24.11",
+    "gatsby-plugin-react-helmet": "^3.3.10",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
+    "gatsby-plugin-ts-loader": "^0.1.0",
+    "gh-pages": "^3.1.0",
     "prettier": "^1.18.2",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
+    "typescript": "^3.9.7"
   },
   "devDependencies": {},
   "keywords": [
